--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,7 @@
         <servlet-class>
             org.springframework.web.servlet.DispatcherServlet
         </servlet-class>
+            
         <load-on-startup>1</load-on-startup>
     </servlet>
     
@@ -14,6 +15,10 @@
         <servlet-name>ewide</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-    
-    
+    <listener>
+    <listener-class>
+        org.springframework.web.context.ContextLoaderListener
+    </listener-class>
+</listener>
+
 </web-app>
