--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>2.5</version>
+			<version>4.1.4.RELEASE</version>
 		</dependency>
         <!-- Spring Security -->
 		<dependency>
