--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
 	      <version>4.5.0.201609210915-r</version>
 	    </dependency>
 	    
+	    <dependency>
+   			 <groupId>com.fasterxml.jackson.jaxrs</groupId>
+   			 <artifactId>jackson-jaxrs-base</artifactId>
+   			 <version>2.6.1</version>
+		</dependency>
+	    
 	    <!-- ******* FIN JGIT ******* -->
 	</dependencies>
 
